--- a/display_lamps_console/display_lamps_console.csproj
+++ b/display_lamps_console/display_lamps_console.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="M2MqttDotnetCore" Version="1.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\message_service\message_service.csproj" />
+  </ItemGroup>
+
 </Project>
